--- a/README.org
+++ b/README.org
@@ -8,7 +8,12 @@
 
 * Install
 
-  TODO
+  Download germanium.el file with =git clone= or something, and add to your config.
+
+  #+begin_src elisp
+  (add-to-list 'load-path "/path/to/germaniu.el directory")
+  (require 'germanium)
+  #+end_src
 
 * Usage
 
