--- a/README.org
+++ b/README.org
@@ -1,12 +1,20 @@
 #+author: matsuyoshi30
 #+date: <2021-08-21 土>
 
+[[https://melpa.org/#/germanium][file:https://melpa.org/packages/germanium-badge.svg]]
+
 * Description
 
   Tool for generating image from source code using [[https://github.com/matsuyoshi30/germanium][germanium]].
   It requires you to have the =germanium= command-line tool installed on your path.
 
 * Install
+
+** MELPA
+
+   =germanium.el= can be installed with package.el from MELPA.
+
+** Manual
 
   Download germanium.el file with =git clone= or something, and add to your config.
 
